--- a/chat-service/env.example
+++ b/chat-service/env.example
@@ -1,5 +1,5 @@
 # MongoDB Atlas Connection String
-MONGO_URI=mongodb+srv://22012842_db_user:NKxqsFtLLJb3EWRO@cluster.a0wc2wk.mongodb.net/userdb?retryWrites=true&w=majority&appName=Cluster
+MONGO_URI=mongodb+srv://22012842_db_user:NKxqsFtLLJb3EWRO@cluster.a0wc2wk.mongodb.net/messagedb?retryWrites=true&w=majority&appName=Cluster
 
 # Auth Service URL
 AUTH_SERVICE_URL=http://auth-service:3001
@@ -12,3 +12,8 @@ PORT=3003
 
 # Node Environment
 NODE_ENV=production
+
+# Cloudinary Configuration (for file/image uploads)
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
