--- a/chat-service/package.json
+++ b/chat-service/package.json
@@ -13,7 +13,9 @@
     "mongoose": "^7.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "axios": "^1.5.0"
+    "axios": "^1.5.0",
+    "cloudinary": "^1.41.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
