--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=3001
-      - MONGO_URI=${MONGO_URI}
+      - MONGO_URI=mongodb+srv://22012842_db_user:NKxqsFtLLJb3EWRO@cluster.a0wc2wk.mongodb.net/userdb?retryWrites=true&w=majority&appName=Cluster
       - JWT_SECRET=${JWT_SECRET}
     depends_on:
       - mongo
@@ -20,8 +20,12 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=3002
-      - MONGO_URI=${MONGO_URI}
+      - MONGO_URI=mongodb+srv://22012842_db_user:NKxqsFtLLJb3EWRO@cluster.a0wc2wk.mongodb.net/userdb?retryWrites=true&w=majority&appName=Cluster
+      - JWT_SECRET=your-super-secret-jwt-key-here-12345
       - AUTH_SERVICE_URL=http://auth-service:3001
+      - CLOUDINARY_CLOUD_NAME=${CLOUDINARY_CLOUD_NAME}
+      - CLOUDINARY_API_KEY=${CLOUDINARY_API_KEY}
+      - CLOUDINARY_API_SECRET=${CLOUDINARY_API_SECRET}
     depends_on:
       - mongo
       - auth-service
@@ -35,7 +39,8 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=3003
-      - MONGO_URI=${MONGO_URI}
+      - MONGO_URI=mongodb+srv://22012842_db_user:NKxqsFtLLJb3EWRO@cluster.a0wc2wk.mongodb.net/messagedb?retryWrites=true&w=majority&appName=Cluster
+      - JWT_SECRET=your-super-secret-jwt-key-here-12345
       - AUTH_SERVICE_URL=http://auth-service:3001
       - USER_SERVICE_URL=http://user-service:3002
     depends_on:
