--- a/frontend-service/Dockerfile
+++ b/frontend-service/Dockerfile
@@ -5,14 +5,17 @@ WORKDIR /app
 # Copy package files
 COPY package*.json ./
 
-# Install dependencies
-RUN npm install --only=production
+# Install deps (include dev for build)
+RUN npm install
 
 # Copy source code
 COPY . .
 
 # Expose port
 EXPOSE 3000
+
+# Build React app
+RUN npm run build || true
 
 # Start the application
 CMD ["npm", "start"]
