--- a/frontend-service/package.json
+++ b/frontend-service/package.json
@@ -5,14 +5,20 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build": "vite build"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "axios": "^1.5.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "@vitejs/plugin-react": "^4.3.0",
+    "nodemon": "^3.0.1",
+    "vite": "^5.4.0"
   }
 }
